--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -1,27 +1,53 @@
 .card {
   width: 320px;
   overflow: hidden;
-  position: relative;
   margin: 30px auto;
-  border-radius: 15px;
+  border-radius: 15px 15px 0 0;
   .header {
     width: 100%;
     height: 300px;
+    position: relative;
+    .description {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      z-index: 1;
+      color: #fff;
+      background-color: rgba($color: #000000, $alpha: 0.5);
+      height: 100px;
+      padding: 10px;
+      h3{
+        font-size: 18px;
+        font-weight: bold;
+        margin: 0;
+      }
+    }
   }
-  .description {
-    position: absolute;
+  .information {
+    display: flex;
     width: 100%;
-    bottom: 0;
-    z-index: 1;
-    color: #fff;
-    background-color: rgba($color: #000000, $alpha: 0.5);
-    height: 100px;
-    border-radius: 0 0 15px 15px;
     padding: 10px;
-    h3{
-      font-size: 18px;
-      font-weight: bold;
-      margin: 0;
+    flex-wrap: wrap;
+    border: 1px solid #d4d4d4;
+    font-size: 14px;
+    font-weight: 300;
+    .direction {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .address {
+      display: flex;
+      align-items: center;
+      img {
+        margin-right: 8px;
+      }
+      p {
+        margin: 0;
+        margin-top: 3px; 
+      }
     }
   }
 }
