--- a/components/dumb/index.module.scss
+++ b/components/dumb/index.module.scss
@@ -38,11 +38,30 @@
     position: absolute;
     top: 0;
   }
-  p {
+}
+
+.score {
+  display: flex;
+  align-items: center;
+  .count {
     font-size: 14px;
     font-weight: 300;
     padding: 0;
     margin: 0;
     margin-left: 10px;
+    margin-top: 5px;
   }
+}
+
+.button {
+  border-radius: 5px;
+  width: 120px;
+  height: 40px;
+  justify-content: center;
+  color: #000;
+  text-decoration: none;
+  border: 3px solid #d4d4d4;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
 }
