--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -1,52 +1,181 @@
 .card {
-  width: 320px;
-  overflow: hidden;
+  width: 100%;
+  max-width: 320px;
   margin: 30px auto;
-  border-radius: 15px 15px 0 0;
+  padding: 0 20px;
+  box-sizing: content-box;
+  border-radius: 15px;
+  transition: .3s all;
+  cursor: pointer;
   .header {
     width: 100%;
     height: 300px;
     position: relative;
+    overflow: hidden;
+    border-radius: 15px 15px 0 0;
+  }
+  .information {
+    width: 100%;
+    padding: 10px 10px 20px 10px;
+    flex-wrap: wrap;
+    border: 1px solid #d4d4d4;
+    font-size: 14px;
+    border-radius: 0 0 15px 15px;
+    position: relative;
     .description {
       position: absolute;
       width: 100%;
-      bottom: 0;
+      top: -100px;
+      left: 0;
       z-index: 1;
       color: #fff;
       background-color: rgba($color: #000000, $alpha: 0.5);
       height: 100px;
       padding: 10px;
-      h3{
+      h3 {
         font-size: 18px;
         font-weight: bold;
         margin: 0;
       }
     }
-  }
-  .information {
-    display: flex;
-    width: 100%;
-    padding: 10px;
-    flex-wrap: wrap;
-    border: 1px solid #d4d4d4;
-    font-size: 14px;
-    font-weight: 300;
     .direction {
       width: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
     .address {
       display: flex;
       align-items: center;
-      img {
+      margin-bottom: 15px;
+      svg {
         margin-right: 8px;
       }
       p {
         margin: 0;
-        margin-top: 3px; 
+        margin-top: 3px;
+        span {
+          margin-left: 5px;
+          color: #027A97;
+        }
+      }
+    }
+    .transactions {
+      width: 100%;
+      display: flex;
+      svg {
+        margin-right: 10px;
+        margin-left: 5px;
+        &:nth-child(1n+2) {
+          margin-left: 15px;
+        }
+      }
+      p {
+        margin: 0;
+        text-transform: capitalize;
+      }
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .card {
+    max-width: 600px;
+    .information {
+      position: relative;
+      .direction {
+        position: absolute;
+        width: 176px;
+        top: -70px;
+        right: 20px;
+        display: flex;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+        svg {
+          right: 20px;
+          top: 10px;
+          order: 2;
+          margin-top: 30px;
+        }
+        a {
+          order: 1;
+          width: 100%;
+          border-color: #d4d4d4;
+          color: #fff;
+          z-index: 2;
+          transition: .3s all;
+          &:hover {
+            background-color: #fff;
+            color: #008055;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1440px) {
+  .card {
+    max-width: 997px;
+    display: flex;
+    position: relative;
+    margin-bottom: 100px;
+    &:hover {
+      .header {
+        transform: scale(1.02);
+      }
+      .information {
+        padding-left: 20px;
+      }
+      &:after{
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+      }
+    }
+    &:after{
+      content: "";
+      height: 1px;
+      background-color: #d4d4d4;
+      width: 75%;
+      position: absolute;
+      bottom: -50px;
+      right: 0;
+    }
+    .header {
+      transition: .3s all;
+      max-width: 500px;
+      height: 250px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    .information {
+      border: none;
+      padding-top: 0;
+      transition: .3s all;
+      .direction {
+        top: 0;
+        height: 250px;
+        align-items: flex-start;
+        svg {
+          order: 1;
+          margin-top: 0;
+        }
+        a {
+          margin-top: 160px;
+          color: #000;
+          font-weight: bold;
+          &:hover{
+            border-color: #008055;
+          }
+        }
+      }
+      .description {
+        background-color: transparent;
+        height: auto;
+        position: initial;
+        color: #000;
+        padding: 0;
+        padding-bottom: 10px;
       }
     }
   }
