--- a/components/index.module.scss
+++ b/components/index.module.scss
@@ -16,8 +16,37 @@
   display: none;
 }
 
+.notFound {
+  margin: auto;
+  display: flex;
+  height: calc(100vh - 200px);
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: bold;
+  animation: show .5s forwards;
+}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @media (min-width: 992px) {
   .isSearchMobileOpen {
     display: flex;
+  }
+
+  .notFound {
+    height: calc(100vh - 100px);
+    font-size: 24px;
   }
 }
