--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -15,6 +15,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 15px 15px 0 0;
+    border: 1px solid #d4d4d4;
     img {
       position: absolute;
       height: 100%;
@@ -22,6 +23,14 @@
       inset: 0px;
       object-fit: cover;
       color: transparent;
+    }
+    &.noFoundImage {
+      img {
+        object-fit: initial;
+        margin: auto;
+        width: 100px;
+        height: 100px;
+      }
     }
   }
   .information {
