adding pagination and geolocation

--- a/components/index.module.scss
+++ b/components/index.module.scss
@@ -1,6 +1,7 @@
 .content {
   display: flex;
   justify-content: center;
+  overflow: hidden;
   .contentContainer {
     display: flex;
     justify-content: flex-end;
