--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -83,6 +83,11 @@
     .transactions {
       width: 100%;
       display: flex;
+      flex-wrap: wrap;
+      .item {
+        margin-bottom: 10px;
+        display: flex;
+      }
       svg {
         margin-right: 10px;
         margin-left: 5px;
