starting the detail component

--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -55,6 +55,9 @@
         font-size: 18px;
         font-weight: bold;
         margin: 0;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
     .direction {
