--- a/components/index.module.scss
+++ b/components/index.module.scss
@@ -7,6 +7,15 @@
     justify-content: flex-end;
   }
 }
+.mask {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  top: 0;
+  left: 0;
+  position: fixed;
+}
 .cardContainer {
   display: flex;
   flex-wrap: wrap;
