--- a/components/detail/index.module.scss
+++ b/components/detail/index.module.scss
@@ -112,6 +112,7 @@
         }
     }
     .location {
+      position: relative;
       .map {
         position: relative;
         border-radius: 15px;
@@ -140,6 +141,48 @@
         }
         .address p:last-child {
           margin: 0;
+        }
+      }
+      &::after {
+        position: absolute;
+        content: "";
+        border: 1px solid #d4d4d4;
+        bottom: -30px;
+        transform: translateX(-50%);
+        left: 50%;
+        width: 100%;
+      }
+    }
+    .reviews {
+      margin-top: 60px;
+      .review {
+        display: block;
+        margin-bottom: 25px;
+        .user {
+          display: flex;
+          align-items: center;
+          .portrait {
+            width: 100px;
+            height: 100px;
+            border-radius: 100%;
+            margin-right: 15px;
+            position: relative;
+            overflow: hidden;
+          }
+          .rating {
+            display: block;
+            .userName {
+              margin: 0;
+              padding: 0;
+              font-size: 20px;
+              font-weight: 600;
+              margin-left: 5px;
+            }
+          }
+        }
+        .comment {
+          font-size: 14px;
+          font-weight: 300;
         }
       }
     }
