--- a/components/index.module.scss
+++ b/components/index.module.scss
@@ -11,7 +11,7 @@
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 2;
+  z-index: 4;
   top: 0;
   left: 0;
   position: fixed;
@@ -22,8 +22,12 @@
   width: 100%;
 }
 
-.isSearchMobileOpen, .isOpenDetail {
+.isSearchMobileOpen {
   display: none !important;
+}
+
+.isOpenDetail  {
+  animation: hide 1s forwards;
 }
 
 .notFound {
@@ -36,6 +40,22 @@
   font-size: 16px;
   font-weight: bold;
   animation: show .5s forwards;
+}
+
+@keyframes hide {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  99% {
+    opacity: 0;
+    transform: translateY(300px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(300px);
+    display: none;
+  }
 }
 
 @keyframes show {
