--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -1,6 +1,5 @@
 .card {
   width: 100%;
-  max-width: 320px;
   margin: 30px auto;
   padding: 0 20px;
   box-sizing: content-box;
@@ -58,6 +57,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        
       }
     }
     .direction {
@@ -150,6 +150,11 @@
         }
       }
     }
+    .description {
+      h3 {
+        max-width: 60%;
+      }
+    }
   }
 }
 
@@ -216,6 +221,9 @@
         color: #000;
         padding: 0;
         padding-bottom: 10px;
+        h3 {
+          max-width: 85%;
+        }
       }
     }
   }
