--- a/components/dumb/index.module.scss
+++ b/components/dumb/index.module.scss
@@ -10,6 +10,10 @@
     margin-right: 10px;
     font-size: 12px;
     font-weight: 300;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 120px;
   }
 }
 
