--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,9 @@ $screen-md-min: 992px;
 $screen-lg-min: 1440px;
 
 /****** end vars *********/
+html {
+  scroll-behavior: smooth;
+}
 
 *,
 ::after,
