adding a default box when the bussines does not have a schedule

--- a/components/detail/index.module.scss
+++ b/components/detail/index.module.scss
@@ -157,6 +157,10 @@
         max-width: 345px;
         margin: auto;
         margin-top: 20px;
+        .notHours { 
+          text-transform: capitalize;
+          font-weight: bold;
+        }
         table {
           width: 100%;
           padding: 20px;
