--- a/components/card/index.module.scss
+++ b/components/card/index.module.scss
@@ -50,6 +50,9 @@
       background-color: rgba($color: #000000, $alpha: 0.5);
       height: 100px;
       padding: 10px;
+      &.viewed {
+        color: #027A97;
+      }
       h3 {
         font-size: 18px;
         font-weight: bold;
