fixing the loading for details component

--- a/components/detail/index.module.scss
+++ b/components/detail/index.module.scss
@@ -22,6 +22,7 @@
     background-color: #fff;
     width: 100%;
     height: fit-content;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
   }
